--- a/3-CSS/304-CSS-BOX-MODEL/CSS-304-03/index.css
+++ b/3-CSS/304-CSS-BOX-MODEL/CSS-304-03/index.css
@@ -1,1 +1,26 @@
-/* start your css here */
+
+body{
+    margin: 0px;
+    padding: 0px;
+}
+img{
+    width: 300px;
+    height: 370px;
+    margin-left: 20px;
+    margin-top: -40px;
+    box-shadow: 10px;
+}
+#para{
+    font-style: normal;
+    margin-left: 20px;
+    margin-top: 10px;
+    font-size: 0.9rem;
+    font-family: "Mier demi";
+    font-style: normal;
+}
+#rs{
+    color: rgb(87, 86, 86);
+  
+    margin-left:20px ;
+    margin-top: -5px;
+}
