--- a/3-CSS/305-CSS-Flexbox/CSS-305-04/style.css
+++ b/3-CSS/305-CSS-Flexbox/CSS-305-04/style.css
@@ -1,1 +1,150 @@
 /* start your styling here  */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    font-family:robot,arial,sans-serif ;
+    text-decoration: none;
+    min-height: 140vh;
+    background: #f1f3f6;
+}
+.flex{
+  display: flex;  
+}
+.fa{
+    margin:0px 4px ;
+}
+.fa-angle-down{
+    font-weight:lighter ;
+    margin: 0;
+}
+.fa-user{
+    border-radius: 50%;
+}
+/* styling navigation */
+.heading_navigation{
+    background-color:#2874f0 ;
+    height: 56px;
+    position: sticky;
+    top: 0;
+    z-index: 2;
+}
+.nav_container{
+    align-items: center;
+    max-width:1248px ;
+    margin: auto;
+    width: 100%;
+    position: relative;
+    left: 61px;
+}
+.logo{
+    flex-direction: column;
+    width: fit-content;
+}
+.anchor{
+    cursor: pointer;
+    text-decoration: none;
+    color: whitesmoke;
+}
+.flip_logo img{
+    width: 75px;
+}
+.anchor{
+    font-size:11px ;
+    font-style: italic;
+    margin-top: -5px;
+}
+.plus_img{
+    width: 10px;
+}
+.plus_lan{
+    color: #ffe500;
+    margin: 0px 2px;
+    font-weight: bold;
+}
+.search_bar_container{
+    min-width: 304px;
+    width: 708px;
+}
+.search_bar{
+    max-width: 564px;
+    width: 100%;
+    margin-left: 10px;
+    box-shadow: 0px 2px 4px 0 rgb(0, 0, 0/23%);
+}
+.search_box{
+    outline: none;
+    padding: 0px 16px;
+    height: 36px;
+    border-radius: 2px 0px 0px 2px;
+    border: 0;
+    width: 100%;
+    font-size:14px;
+}
+.btn_search{
+    background: #fff;
+    border: 1px solid #fff;
+    padding: 4px 12px 4px 8px;
+    width: 44px;
+    height: 36px;
+    cursor: pointer;
+    border-radius:0px 2px 2px 0px ;
+    color: #2874f0;
+    font-size: 19px;
+}
+.login_btn{
+    color: #2874f0;
+    border-radius: 2px;
+    border: 1px solid #dbdbdb;
+    background: #fff;
+    letter-spacing: 1px;
+    height: 32px;
+    padding: 6px 40px;
+    font-weight: bold;
+    margin: 0px 10px;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 16px;
+}
+._3-PJz- {
+    /* display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-align-items: center;
+    -ms-flex-align: center; */
+    align-items: center;
+    line-height: 20px;
+    font-size: 16px;
+    letter-spacing: .1px;
+    font-weight: 500;
+    color: #fff;
+    position: relative;
+    margin-left: 10px;
+}
+.heading_categories{
+    background: #fff;
+    justify-content: center;
+    min-height: 112px;
+    border-bottom: 2px solid lightgray;
+}
+.heading_category_list{
+    list-style: none;
+    max-width: 1280px;
+    justify-content: space-between;
+    width: 100%;
+}
+.heding_category_items{
+    padding: 12px 8px;
+    cursor: pointer;
+    text-align: center;
+}
+.heding_category_items:hover{
+    color: #2874f0;
+}
+.image{
+    height:64px;
+    width: 64px;
+    margin-bottom:3px ;
+}
