--- a/3-CSS/306-CSS-Grid/CSS-306-01/style.css
+++ b/3-CSS/306-CSS-Grid/CSS-306-01/style.css
@@ -1,1 +1,65 @@
-/* start your styling here  */
+.container{
+    display: grid;
+    grid-template-columns:repeat(14,1fr);
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    height: 500px;
+    width: 80%;
+    grid-gap: 10px;
+    background-color: black;
+    padding: 10px;
+}
+.box{
+    text-align: center;
+    padding: 10px;
+    
+}
+.box1{
+    background-color: aqua;
+    grid-column: 1/3;
+    grid-row: 1/2;
+}
+.box2{
+    background-color: blueviolet;
+    grid-column: 3/11;
+    grid-row: 1/3;
+}
+.box3{
+    background-color:violet;
+    grid-column: 11/15;
+    grid-row: 1/2;
+}
+.box4{
+    background-color: red;
+    grid-column: 1/3;
+    grid-row: 2/3;
+}
+.box5{
+    background-color: greenyellow;
+    grid-column: 11/15;
+    grid-row: 2/3;
+}
+.box6{
+    background-color: orange;
+    grid-column: 1/3;
+    grid-row: 3/4;
+}
+.box7{
+    background-color: pink;
+    grid-column: 3/5;
+    grid-row: 3/4;
+}
+.box8{
+    background-color: yellowgreen;
+    grid-column: 5/11;
+    grid-row: 3/4;
+}
+.box9{
+    background-color: skyblue;
+    grid-column: 11/13;
+    grid-row: 3/4;
+}
+.box10{
+    background-color: rebeccapurple;
+    grid-column: 13/15;
+    grid-row: 3/4;
+}
