--- a/3-CSS/306-CSS-Grid/CSS-306-01/style.css
+++ b/3-CSS/306-CSS-Grid/CSS-306-01/style.css
@@ -51,7 +51,7 @@
 .box8{
     background-color: yellowgreen;
     grid-column: 5/11;
-    grid-row: 3/4;
+    grid-row: 3/5;
 }
 .box9{
     background-color: skyblue;
@@ -63,3 +63,38 @@
     grid-column: 13/15;
     grid-row: 3/4;
 }
+.box11{
+    background-color: rebeccapurple;
+    grid-column: 1/3;
+    grid-row: 4/5;
+}
+.box12{
+    background-color: rgb(153, 51, 144);
+    grid-column: 3/5;
+    grid-row: 4/5;
+}
+.box13{
+    background-color: rgb(153, 88, 51);
+    grid-column: 11/13;
+    grid-row: 4/5;
+}
+.box14{
+    background-color: rgb(78, 51, 153);
+    grid-column: 13/15;
+    grid-row: 4/5;
+}
+.shape {
+    background: #fff;
+    height: 20px;
+    text-align: center;
+    transform:rotate(45deg);
+      width:20px;
+  }
+  .diamond {
+    color: #333;
+    display: table-cell;
+    height: 60px;
+    transform: rotate(-45deg);
+    vertical-align: middle;
+      width:60px;
+  }
