--- a/3-CSS/308-CSS-Pseudo-Classes/CSS-308-02/style.css
+++ b/3-CSS/308-CSS-Pseudo-Classes/CSS-308-02/style.css
@@ -1,1 +1,49 @@
 /* start your styling here  */
+/* .container{
+    display: inline-block;
+    width: 30%;
+   
+} */
+.menu-button{
+    cursor: pointer;
+    border: none;
+    
+}
+/* .right-menu{
+    position: relative;
+  display: inline-block;
+} */
+button{
+    width: 90px;
+    height: 40px;
+    background-color: orangered;
+    /* margin: 5px; */
+    margin-top: 20px;
+    color: #fff;
+    border: none;
+  
+}
+.item{
+    display: flex;
+}
+.right-menu{
+    position: relative;
+}
+.dropdown-menu{
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 8px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+.dropdown-menu a{
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+.dropdown-menu:hover + .dropdown-menu{
+    background-color: aqua;
+    display: block;
+}
