--- a/3-CSS/304-CSS-BOX-MODEL/CSS-304-02/style.css
+++ b/3-CSS/304-CSS-BOX-MODEL/CSS-304-02/style.css
@@ -16,6 +16,7 @@ body{
     padding-top:3px ;
 }
 h2{
+    margin-left: 25px;
     color: white;
 }
 .form{
@@ -57,6 +58,11 @@ h2{
     font-size: 20px;
     padding-left: 10px;
     color: black;
+}
+#check{
+    width: 30px;
+    height: 30px;
+    border-radius: 5px;
 }
 a{
     color: white;
