--- a/3-CSS/308-CSS-Pseudo-Classes/CSS-308-02/style.css
+++ b/3-CSS/308-CSS-Pseudo-Classes/CSS-308-02/style.css
@@ -1,4 +1,4 @@
-/* start your styling here  */
+start your styling here 
 /* .container{
     display: inline-block;
     width: 30%;
@@ -47,9 +47,7 @@
     background-color: aqua;
     display: block;
 } */
-body{
-    display: flex;
-}
+
 .main{
     display: flex;
 }
