--- a/3-CSS/305-CSS-Flexbox/CSS-305-06/style.css
+++ b/3-CSS/305-CSS-Flexbox/CSS-305-06/style.css
@@ -1,1 +1,97 @@
 /* start your styling here  */
+.spe{
+    float: left;
+    
+    height: 700px;
+width:50%
+}
+.some{
+    float:right;
+width:50%;
+
+align-items: center;
+    text-align: center;
+    height:700px ;
+
+
+}
+*{
+    margin: 0;
+    padding: 0;
+}
+.logo img{
+    width: 70px;
+    height: 70px;
+}
+.logo{
+    font-size: 2rem;
+    font-weight: bolder;
+    color: blue;
+    position: absolute;
+    left: 10%;
+    top: 10%;
+}
+.content{
+    position: absolute;
+    left: 10%;
+    /* font-weight: 900; */
+    font-size: 29px;
+    color:palevioletred;
+    top: 25%;
+text-transform: capitalize;
+}
+form{
+    position: absolute;
+    top: 40%;
+    left: 10%;
+    
+}
+input{
+    width: 300px;
+    padding: 10px;
+    margin: 7px;
+}
+#para{
+    margin-top: 75%;
+    margin-left: 200px;
+}
+button{
+    position: absolute;
+    top: 66%;
+    left: 10%;
+    width: 330px;
+    padding: 10px;
+    background-color: blue;
+    color:white;
+    font-weight: 900;
+    font-size: 18px;
+    cursor: pointer;
+    border-radius: 10px;
+}
+.icon img{
+    width: 50px;
+    height: 50px;
+}
+.head{
+    display: flex;
+    margin-top: 49px;
+    justify-content: space-between;
+    width: 500px;
+    margin-left: 55px;
+}
+.join{
+    text-align: center;
+    align-items: center;
+}
+.imgs img{
+    width: 600px;
+    margin-top: 10%;
+    box-shadow: 0px 0px 10px;
+    height: 500px;
+}
+a{
+    text-decoration: none;
+}
+.logo{
+    cursor: pointer;
+}
