--- a/3-CSS/308-CSS-Pseudo-Classes/CSS-308-02/style.css
+++ b/3-CSS/308-CSS-Pseudo-Classes/CSS-308-02/style.css
@@ -1,97 +1,59 @@
-start your styling here 
-/* .container{
-    display: inline-block;
-    width: 30%;
-   
-} */
-/* .menu-button{
-    cursor: pointer;
-    border: none;
-    
-} */
-/* .right-menu{
-    position: relative;
-  display: inline-block;
-} */
-/* button{
-    width: 90px;
-    height: 40px;
-    background-color: orangered;
-    /* margin: 5px; */
-    /* margin-top: 20px;
-    color: #fff;
-    border: none;
+.container{
+    width: 100px;
+    height: 100px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 30px;
+}
+.item1 h2{
+    margin: -9px 1px;
+    font-size: 40px;
+}
+.item2{
+    border: 2px solid black;
+}
+.item2 button{
+    padding: 16px;
+   font-size: 16px;
   
-} */ 
-/* .item{
-    display: flex;
+    background-color: orangered;
+    color: white;
+    border: none;
+
+}
+.item3 h2{
+    margin: -9px 1px;
+    font-size: 40px;
+}
+.menu-button{
+    background-color: #f44336;
+color: white;
+   padding: 16px;
+   font-size: 16px;
+   cursor: pointer;
+
 }
 .right-menu{
     position: relative;
+
 }
 .dropdown-menu{
     display: none;
     position: absolute;
     background-color: #f1f1f1;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 8px 16px 8px rgba(0,0,0,0.2);
     z-index: 1;
 }
-.dropdown-menu a{
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-.dropdown-menu:hover + .dropdown-menu{
-    background-color: aqua;
-    display: block;
-} */
 
-.main{
-    display: flex;
-}
-.main1{
-    display: flex;
-}
-.dropbtn {
-    background-color: orangered;
+.dropdown-menu a{
     color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-  }
-  
-  /* The container <div> - needed to position the dropdown content */
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
-  
-  
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content a {
-    color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
-  }
-  
-  /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: #ddd;}
-  
-  /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content {display: block;}
-  
-  /* Change the background color of the dropdown button when the dropdown content is shown */
-  .dropdown:hover .dropbtn {background-color:orangered;}
+}
+.menu-button:hover + .dropdown-menu{
+    background-color: grey;
+    display: block;
+}
