--- a/3-CSS/305-CSS-Flexbox/CSS-305-03/style.css
+++ b/3-CSS/305-CSS-Flexbox/CSS-305-03/style.css
@@ -1,19 +1,122 @@
 /* start your styling here  */
+.container{
+    width: 100%;
+    height: 70%;
+    /* border: 2px solid red; */
+    background-color: #f2f2f2;
+}
 .main{
-    display: flex;
+    border-radius: 10px;
+display: flex;
+margin: 30px 28px;
+padding: 12px 9px;
 }
-.flex{
-    width: 400px;
-    height: 500px;
-    background-color: orange;
+.main-1{
+    background-color: #e38826;
+    padding: 45px 37px;
+    border-radius: 20px 0px 0px 20px;
 }
-h1{
-   text-align: center;
-   padding-top: 20px;
+.main-2{
+    background-color: #006970;
+    padding: 45px 37px;
 }
-button{
-    width: 100px;
-    height: 40px;
-    text-align: center;
-    align-items: center;
+.main-3{
+    background-color: #004241;
+    padding: 45px 37px;
+    border-radius: 0px 20px 20px 0px;
+}
+.icon1-img{
+    background-color: #b66d1e;
+display: inline-block;
+width: 47px;
+border-radius: 50%;
+}
+.icon1-img img{
+    width: 37px;
+padding: 4px 21px;
+mix-blend-mode: overlay;
+filter: invert(1);
+}
+.icon2-img img{
+width: 37px;
+padding: 4px 21px;
+mix-blend-mode: overlay;
+filter: invert(1);
+}
+.icon3-img img{
+width: 37px;
+padding: 4px 21px;
+mix-blend-mode: overlay;
+filter: invert(1);
+}
+.icon2-img{
+background-color: #00545a;
+display: inline-block;
+width: 47px;
+border-radius: 50%;
+}
+.icon3-img{
+background-color: #003534;
+display: inline-block;
+width: 47px;
+border-radius: 50%;
+}
+.h2-content1{
+    color: white;
+padding: 3px 5px;
+font-size: 20px;
+font-family: system-ui;
+}
+.h2-content2{
+    color: white;
+padding: 3px 5px;
+font-size: 20px;
+font-family: system-ui;
+}
+.h2-content3{
+    color: white;
+padding: 3px 5px;
+font-size: 20px;
+font-family: system-ui;
+}
+.para{
+color: white;
+padding: 30px 5px;
+opacity: 0.7;
+
+}
+.main2-p{
+color: white;
+padding: 30px 5px;
+opacity: 0.9;
+}
+.main3-p{
+color: white;
+padding: 30px 5px;
+opacity: 0.9;
+}
+.btn1 button{
+    padding: 14px 23px;
+font-size: 16px;
+border-radius: 30px;
+background-color: white;
+color: #e38826;
+border: none;
+}
+.btn2 button{
+    padding: 14px 23px;
+font-size: 16px;
+border-radius: 30px;
+background-color: white;
+color: #006970;
+border: none;
+}
+.btn3 button{
+    padding: 14px 23px;
+font-size: 16px;
+border-radius: 30px;
+background-color: white;
+color: #004241;
+border: none;
+
 }
