--- a/3-CSS/308-CSS-Pseudo-Classes/CSS-308-03/style.css
+++ b/3-CSS/308-CSS-Pseudo-Classes/CSS-308-03/style.css
@@ -1,1 +1,130 @@
 /* start your styling here  */
+body{
+    margin: -10px 0px;
+}
+.footer{
+    margin: 0%;
+    padding: 0%;
+    width: 100%;
+    position: fixed;
+    z-index: 1;
+}
+.navbar-brand-img img{
+    width: 140px;
+    margin: 0px 20px;
+}
+ul.navbar-nav{
+    margin: 1px 15px;
+}
+li.nav-item{
+    margin: 0px 15px;
+}
+li.nav-item a{
+    color: black;
+    font-weight: 600;
+}
+nav.navbar{
+    background-color: rgba(250,229,150,1)!important;
+}
+.main{
+    position: absolute;
+margin: 86px 0px;
+display: flex;
+ 
+    justify-content: space-evenly;
+}
+div.main-1{
+    margin-left: 30px;
+padding: 0px 71px;
+}
+.main2{
+    display: flex;
+    flex-direction: column;
+
+}
+.main2-img{
+    margin-right: 120px;
+margin-top: -12px;
+}
+.last{
+    position: absolute;
+    margin-top:  67%;
+    width: 100%;
+    height: 200px;
+    background-color: #454545;
+  
+    text-align: center;
+    padding: 50px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.last-btn-1,.last-btn-2{
+          background-color: white;
+          color: black;
+          border-radius: 5px;
+}
+.lastdiv{
+    position: absolute;
+    margin-top:  82%;
+    width: 100%;
+    height: 200px;
+    background-color: #173e43;
+    color: white;
+  
+    text-align: center;
+    padding: 50px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+li a:hover{
+color:#3fb0ac !important;
+text-decoration:overline !important;
+opacity: 1;
+}
+.last-btn-1:hover{
+color: crimson;
+background-color: black;
+}
+.last-btn-2:hover{
+color: crimson;
+background-color: black;
+}
+.menu-button{
+background-color: #fae596;
+color: white;
+padding: 16px;
+font-size: 16px;
+cursor: pointer;
+color: black;
+font-weight: 500;
+text-decoration: none;
+
+}
+.right-menu{
+position: relative;
+margin: 8px 0px;
+
+}
+.dropdown-menu{
+display: none;
+position: absolute;
+background-color: #f1f1f1;
+min-width: 160px;
+box-shadow: 0px 8px 16px 8px rgba(0,0,0,0.2);
+z-index: 1;
+}
+.dropdown-menu a{
+color: black;
+padding: 12px 16px;
+text-decoration: none;
+display: block;
+}
+.dropdown-menu a:hover{
+background-color: aquamarine;
+color: blue;
+}
+.right-menu:hover .dropdown-menu{
+display: block;
+}
